Fixed: text color of complete seasons dark mode
the readability of complete seasons on season pass is not great. changed from light gray to dark gray

--- a/frontend/src/SeasonPass/SeasonPassSeason.css
+++ b/frontend/src/SeasonPass/SeasonPassSeason.css
@@ -21,4 +21,5 @@
 
 .allEpisodes {
   background-color: #e0ffe0;
+  color: var(--darkGray);
 }
